infra/k8s/ingress/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: book-verse-plus.dev
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: book-verse-plus-auth-srv
                port:
                  number: 3000
          - path: /books/api/v1/book/?(.*)
            pathType: Prefix
            backend:
              service:
                name: book-verse-plus-books-srv
                port:
                  number: 3000
